[package]
name = "anonymous-tokens"
description = "A library for anonymous tokens."
version = "0.0.1"
authors = [""]
edition = "2021"
keywords = ["cryptography"]


[dependencies]
failure="0.1.5"
failure_derive="0.1.5"
merlin = "2.0.0"
rand_chacha = "0.2"
rand = "0.7"
rand_core = "0.5"
sha2="0.9"
digest = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
thiserror = "1"
wasm-bindgen = "0.2"

[dev-dependencies]
criterion = "0.3"

[dependencies.curve25519-dalek]
package = "curve25519-dalek-ng"
version = "3"
features = ["alloc", "std", "serde", "simd_backend"]

[dependencies.zkp]
version="0.8.0"
features = ["bench"]

[[bench]]
name = "sk_benchmarks"
harness = false

[[bench]]
name = "pk_benchmarks"
harness = false